[project]
name = "fastapi-arq-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.117.1",
    "locust>=2.42.0",
    "mypy>=1.18.2",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.13.2",
]

[tool.ruff.lint]
extend-select = ["I"]


[tool.mypy]
python_version = "3.13"
strict = true
files = "src"
ignore_missing_imports = true
